# rules_ml_toolchain

./: .bazelrc  .bazelrc-non-hermetic  .bazelrc.local  HOW-TO-FIX.md  MODULE.bazel  README.md  ROCM_ARCHITECTURE.md  WORKSPACE  build.sh  test.sh
.bcr/: metadata.template.json  presubmit.yml
.github/workflows/: asan_linux_x86_64_linux_x86_64_max_llvm_tests.yaml  asan_linux_x86_64_linux_x86_64_min_llvm_tests.yaml  ci.yaml  cpu_linux_aarch64_linux_aarch64_max_llvm_tests.yaml  cpu_linux_aarch64_linux_aarch64_min_llvm_tests.yaml  cpu_linux_aarch64_linux_aarch64_tests.yaml  cpu_linux_x86_64_linux_aarch64_build.yaml  cpu_linux_x86_64_linux_aarch_build.yaml  cpu_linux_x86_64_linux_x86_64_max_llvm_tests.yaml  cpu_linux_x86_64_linux_x86_64_min_llvm_tests.yaml  cpu_linux_x86_64_linux_x86_64_tests.yaml  cuda12_linux_aarch64_linux_aarch64_build.yaml  cuda12_linux_aarch64_linux_aarch64_tests.yaml  cuda12_linux_x86_64_linux_x86_64_build.yaml  cuda13_linux_aarch64_linux_aarch64_tests.yaml  cuda13_linux_x86_64_linux_x86_64_build.yaml  cuda_linux_aarch64_linux_aarch64_tests.yaml  cuda_linux_x86_64_linux_x86_64_build.yaml  publish.yaml  python_linux_x86_64_tests.yaml  python_linux_x86_tests.yaml  python_windows_tests.yaml  python_windows_x86_tests.yaml  release.yaml  release_prep.sh  rocm_linux_x86_64_linux_x86_64_build.yaml  runner-linux-x86-64.yaml  sanitizers_linux_x86_64_linux_x86_64_max_llvm_tests.yaml  sanitizers_linux_x86_64_linux_x86_64_min_llvm_tests.yaml
cc/: BUILD  gen_crosstool_cppmap.sh  update_all_crosstool_cppmaps.sh
cc/config/: constants.bzl  create-linux-aarch64-sysroot.sh  create-linux-x86_64-sysroot.sh  llvm18_darwin_aarch64.BUILD  llvm18_linux_aarch64.BUILD  llvm18_linux_x86_64.BUILD  llvm19_linux_x86_64.BUILD  llvm20_darwin_aarch64.BUILD  llvm20_linux_aarch64.BUILD  llvm20_linux_x86_64.BUILD  llvm21_linux_aarch64.BUILD  llvm21_linux_x86_64.BUILD  sysroot_darwin_aarch64.BUILD  sysroot_ubuntu18_aarch64.BUILD  sysroot_ubuntu18_x86_64.BUILD  sysroot_ubuntu18_x86_64_gcc9.BUILD  sysroot_ubuntu20_aarch64_gcc10.BUILD  sysroot_ubuntu20_x86_64_gcc10.BUILD  sysroot_ubuntu22_x86_64_gcc12.BUILD
cc/config/aarch64_ubuntu18_gcc8.4/: Dockerfile  sysroot.BUILD
cc/config/aarch64_ubuntu20_gcc10/: Dockerfile  (+1 more)
cc/features/: BUILD  features.bzl  local_sysroot_feature.bzl  use_libstdcxx.bzl
cc/layering_check/: BUILD  build_defs.bzl
cc/llvm/: BUILD
cc/llvms/: llvm.bzl  llvm_darwin.BUILD.tpl  llvm_linux.BUILD.tpl
cc/rocm/: BUILD  rocm_compile.bzl  rocm_flags_provider.bzl  rocm_library.bzl
cc/sanitizers/: README.md  features.bzl
cc/sysroots/: BUILD  collect_cc_libraries.bzl  local_sysroot.bzl  sysroot.bzl  sysroot_linux.BUILD.tpl
cc_toolchain/: BUILD.bazel
cc_toolchain/config/: llvm_linux_x86_64.BUILD  sysroot_ubuntu18_x86_64_gcc9_patch.BUILD
ci/: run_bazel_test_cpu.sh
ci/envs/: default.env
common/: BUILD  README.md  mirrored_http_archive.bzl  tar_extraction_utils.bzl  utils.bzl
extensions/: cuda_configure.bzl  cuda_json.bzl  cuda_redist_init.bzl  hipcc_configure.bzl  local_clang_configure.bzl  local_sysroot_configure.bzl  nccl_configure.bzl  nccl_redist.bzl  nvshmem_json.bzl  nvshmem_redist.bzl  nvshmem_redist_init.bzl  python_version.bzl  rocm_configure.bzl  rocm_hermetic_download.bzl
gpu/: README.md  compiler_common_tools.bzl  nvidia_common_rules.bzl
gpu/cuda/: BUILD.tpl  cuda_configure.bzl  cuda_json_init_repository.bzl  cuda_redist_init_repositories.bzl  cuda_redist_versions.bzl
gpu/nccl/: build_defs.bzl.tpl  cuda_nccl.BUILD.tpl  nccl_configure.bzl  nccl_redist_init_repository.bzl
gpu/nvshmem/: nvidia_nvshmem.BUILD.tpl  nvshmem_json_init_repository.bzl  nvshmem_redist_init_repository.bzl
gpu/rocm/: BUILD  BUILD.tpl  build_defs.bzl.tpl  find_rocm_config.py  hipcc_configure.bzl  rocm_configure.bzl  rocm_hermetic_download.bzl  rocm_redist.bzl  rocm_redist_download.bzl
gpu/sycl/: BUILD  dist_repo.bzl  level_zero.BUILD  oneapi.BUILD  sycl.BUILD  sycl_configure.bzl  sycl_init_repository.bzl  zero_loader.BUILD
gpu/tests/: BUILD.bazel  README.md
py/: BUILD.bazel  BUILD.tpl  manylinux_compliance_test.py  python_configure.bzl  python_init_pip.bzl  python_init_repositories.bzl  python_init_rules.bzl  python_init_toolchains.bzl  python_register_toolchain.bzl  python_repo.bzl  python_wheel.bzl  pywrap.bzl  rules_python_freethreaded.patch  rules_python_versions.patch  setup_py_nvidia_dependencies_util.py  unpack_wheel_and_unzip_archive_files.py
py/rules_pywrap/: BUILD.bazel  def_file_filter_tool.py  pybind_extension.py.tpl  pywrap.default.bzl  pywrap.impl.bzl  wrapped_py_init.cc
py/rules_pywrap/tests/: BUILD  BUILD.bazel  common_library_test.cc  fifth_library.cc  fifth_library.h  first_library.cc  first_library.h  fourth_library.cc  py_common_library_test.cc  pybind.cc  pybind_copy.cc  pybind_py_test.py  pybind_with_starlark_only.cc  pybind_with_starlark_only_py_test.py  pybind_wrapped_py_test.py  regular.cc  regular.h  regular_copy.cc  regular_copy.h  regular_test.cc  second_library.cc  second_library.h  sixth_library.cc  sixth_library.h  static_resource.txt  third_library.cc  third_library.h
py/rules_pywrap/tests/data/: BUILD.bazel  static_resource.txt
py/rules_pywrap/tests/pybind/: BUILD  common_library_test.cc  py_common_library_test.cc  pybind_py_test.py  pybind_with_starlark_only_py_test.py  pybind_wrapped_py_test.py
py/rules_pywrap/tests/pybind/sub_pybind/: BUILD  nested_pybind.cc
py/rules_pywrap/tests/pybind_external/: BUILD  pybind_external_py_test.py  pywrap_external_aggregated_binaries_test.py
py/rules_pywrap/tests/pywrap_external/: BUILD  BUILD.bazel
py/rules_pywrap/tests/sub_pybind/: BUILD  BUILD.bazel  main.py  nested_pybind.cc  relative_import_lib.py  relative_wrapped_import_lib.py
py/tests/pybind_external/: BUILD.bazel  pybind_external_py_test.py  pywrap_external_aggregated_binaries_test.py
py/tests/pywrap_external/: BUILD.bazel
pybind/: BUILD  common_library_test.cc  py_common_library_test.cc  pybind_py_test.py  pybind_wrapped_py_test.py
pybind/sub_pybind/: BUILD
pybind_external/: BUILD
pywrap_external/: BUILD
(+85 files in other folders)
