#load(
#    "//py/rules_pywrap:pywrap.impl.bzl",
#    "pybind_extension",
#)
load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")

pybind_extension(
    name = "nested_pybind",
    srcs = ["nested_pybind.cc"],
#    common_lib_packages = [
#        "",
#        "py/non_existent",  # non-existent package to test that its Ok
#        "py/rules_pywrap/tests",
#        "py/rules_pywrap/tests/pywrap_external", # TODO: Old value was "pywrap_external", is new value ok?
#        "py/rules_pywrap/tests/pybind_external", # TODO: Old value was "pybind_external", is new value ok?
#    ],
    deps = [
        "//py/rules_pywrap/tests:fifth_library",
    ],
    local_defines = ["TARGET_NAME=nested_pybind"],
)

py_library(
    name = "relative_import_lib",
    srcs = ["relative_import_lib.py"],
    deps = [
        ":nested_pybind",
    ],
    visibility = ["//visibility:public"],
)

pybind_extension(
    name = "nested_wrapped_pybind",
    srcs = ["nested_pybind.cc"],
    common_lib_packages = [
        "",
        "py/rules_pywrap/tests",
    ],
    deps = [
        "//py/rules_pywrap/tests:fifth_library",
    ],
    wrap_py_init = True,
    local_defines = ["TARGET_NAME=nested_wrapped_pybind"],
)

py_library(
    name = "relative_wrapped_import_lib",
    srcs = ["relative_wrapped_import_lib.py"],
    deps = [
        ":nested_wrapped_pybind",
    ],
    visibility = ["//visibility:public"],
)

#py_binary(
#    name = "main",
#    srcs = ["main.py"],
#    deps = [":relative_wrapped_import_lib"],
#)